[build-system]
requires = ["setuptools>=69", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "cufk"
version = "0.1.0"
description = "CUDA/PyTorch forward kinematics kernels for internal-coordinate polylines"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["torch"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cufk = ["csrc/*"]

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E741"]
